2014-02-13  Simon Cook  <simon.cook@embecosm.com>

	* include/mageec/mageec-ml.h (mageec_ml::init): Mark as virtual.
	(mageec_ml::make_decision): Likewise.
	(file_ml): Define class for file-based pass control.
	* include/mageec/mageec.h (mageec_framework): Add selection of
	mageec_ml or file_ml as machine learner based on definition of
	MAGEEC_FILEML.
	* ml/ml.cpp (file_ml::init): Store string list of passes to execute
	based on executelist file.
	(file_ml::make_decision): Make execute/don't execute decision based on
	previously loaded execute list.

2014-02-11  Simon Cook  <simon.cook@embecosm.com>

	* ml/ml.cpp (mageec_ml::finish): Only delete database object if it
	exists.

2014-02-11  Simon Cook  <simon.cook@embecosm.com>

	* gcc_plugin/feature-extract.cpp (mageec_featextract_exec): Build
	feature vector and pass to MAGEEC storage layer.
	* gcc_plugin/gcc-callbacks.cpp (mageec_pass_gate): Make decision
	on executing pass based on previously stored features.
	* gcc_plugin/gcc-plugin.cpp (void parse_arguments): Add parsing for
	'nodecide' argument to disable decision making.
	* gcc_plugin/mageec-plugin.h (mageec_no_decision): Add parameter for
	disabling decision making.
	* include/mageec/mageec-db.h (get_pass_blob): Defined.
	* include/mageec/mageec-decision.h: Add header for decision state.
	* include/mageec/mageec-ml.h (mageec_framework::make_decision):
	Defined.
	* include/mageec/mageec.h (mageec_framework::featset): Add feature
	vector storage.
	(mageec_framework::take_features): Defined to add to feature storage.
	(mageec_framework::make_decision): Defined for decision making.
	* include/Makefile.am: Add mageec/mageec-decision.h to headers.
	* include/Makefile.in: Regenerated.
	* mageec/mageec.cpp (mageec_framework::new_file): Clear feature store.
	(mageec_framework::end_file): Clear feature store.
	(mageec_framework::take_features): Store given features in store.
	(mageec_framework::make_decision): Pass stored features to ML layer.