@@ -1,4 +1,4 @@
 nobase_include_HEADERS = mageec/mageec.h mageec/mageec-ml.h \
                          mageec/mageec-features.h mageec/mageec-db.h \
                          mageec/mageec-passes.h mageec/mageec-result.h \
-                         mageec/mageec-decision.h
+                         mageec/mageec-decision.h mageec/vectormath.h
